<resources>
    <string name="personalInternetBanking">Individual Banking Application</string>
    <string name="enterYourDetailToSignIn">Sign in with your credentials</string>
    <string name="userName">Username</string>
    <string name="enterYourUserName">Enter Your Username</string>
    <string name="password">Password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="goodMorning">Good morning</string>
    <string name="goodAfternoon">Good afternoon</string>
    <string name="goodnight">Good evening</string>
    <string name="welcome">Welcome !</string>
    <string name="notification">Notification</string>
    <string name="incorrectUsernameOrPassword">Incorrect username or password. Please try again.</string>
    <string name="processingError">System temporarily unavailable. Please try again later.</string>
    <string name="passwordResetInstructions">Password Reset Instructions</string>
    <string name="pleaseBringIdToResetPassword">Please bring your ID card or Passport to the nearest SHB Branch to reset your password.</string>
    <string name="shbBranch1">1. SAIGON-HANOI BANK CAMBODIA PLC</string>
    <string name="shbBranch1Address">107 Norodom Blvd,Sangkat Boeung Rang ,Khan Daun Penh,Phnompenh,Cambodia.</string>
    <string name="shbBranch2">2. SAIGON-HANOI BANK CAMBODIA PLC-NEHRU BRANCH</string>
    <string name="shbBranch2Address">161CD Jawaharlal Nehru Blvd, Sangkat Phsar Depou Ti Mouy, Khan Toul Kouk, Phnom Penh</string>
    <string name="shbBranch3">3.SAIGON-HANOI BANK CAMBODIA PLC- SEN SOKH BRANCH</string>
    <string name="shbBranch3Address">511C, Oknha Mong Reththy Street, Sangkat Phnom Penh Thmei, Khan Sen Sokh, Phnom Penh</string>
    <string name="shbBranch4">4.SAIGON-HANOI BANK CAMBODIA PLC-CHNAR AMPOV BRANCH</string>
    <string name="shbBranch4Address">76, National Road, Sangkat Nirouth, Khan Chbar Ampov, Phnom Penh</string>
    <string name="welcomeToShb">Welcome to SHB</string>
    <string name="currentAccount">Current Account</string>
    <string name="transfer">Transfer</string>
    <string name="transferCAP" translatable="false">TRANSFER</string>
    <string name="accounts">Accounts</string>
    <string name="logoutConfirm">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="sessionExpired">Your session has expired. Please log in again to continue.</string>
    <string name="close">Close</string>
    <string name="selectAccount">Select Account</string>
    <string name="loanAccount">Loan Account</string>
    <string name="customerId">Customer ID</string>
    <string name="customerName">Customer Name</string>
    <string name="defaultCasaAccount">Default Current Account</string>
    <string name="email">Email</string>
    <string name="shbOnline">SHB Online</string>
    <string name="userNameLogin">User Name</string>
    <string name="chooseProfilePicture">Choose profile picture</string>
    <string name="takePhoto">Take a photo</string>
    <string name="selectFromPhotoLibrary">Select from photo library</string>
    <string name="profilePictureUpdated">Profile picture updated successfully</string>
    <string name="accountDetails">Account Details</string>
    <string name="availableBalance">Available Balance</string>
    <string name="accountNumber">Account Number</string>
    <string name="branch">Branch</string>
    <string name="transactionHistory">Transaction History</string>
    <string name="viewAll">View all</string>
    <string name="transactionAmount">Transaction Amount</string>
    <string name="fromAccount">From Account</string>
    <string name="remarks">Remarks</string>
    <string name="remarksDefault">Default Remarks</string>
    <string name="enterRemarksDefault">Enter Default Remarks</string>
    <string name="transactionDate">Transaction Date</string>
    <string name="referenceNumber">Reference Number</string>
    <string name="moneyTransfer">Money transfer</string>
    <string name="intrabankTransfer">Intrabank transfer</string>
    <string name="ownAccountTransfer">To me at SHB</string>
    <string name="balance">Balance</string>
    <string name="toAccount">To Account</string>
    <string name="amount">Amount</string>
    <string name="enterAccountNumber">Enter Account Number</string>
    <string name="insufficientBalance">Insufficient Account Balance. Please try again.</string>
    <string name="fee">Fee</string>
    <string name="totalAmount">Total Amount</string>
    <string name="transactionFailed">Transaction failed!</string>
    <string name="tryAgain">Try again</string>
    <string name="transactionExceedLimit">Transaction failed due to exceeding the limit</string>
    <string name="createNewTransaction">New Transaction</string>
    <string name="selectBeneficiary">Select beneficiary</string>
    <string name="confirmationCode">Confirmation Code</string>
    <string name="confirm">Confirm</string>
    <string name="saveRecipient">Save Beneficiary</string>
    <string name="save">Save</string>
    <string name="setNicknameQuestion">Would you like to set a nickname for this recipient?</string>
    <string name="enterNickname">Enter nickname</string>
    <string name="titleNickname">Nickname</string>
    <string name="setNickname">Set nickname</string>
    <string name="complete">Complete</string>
    <string name="nicknameSetSuccess">Nickname set successfully!</string>
    <string name="profilePictureFailed">Profile picture update failed!</string>
    <string name="invalidBeneficiaryAccount">Invalid To Account</string>
    <string name="invalidSelectedDate">Invalid selected date</string>
    <string name="pleaseEnterUsername">Please enter your username.</string>
    <string name="pleaseEnterPassword">Please enter your password.</string>
    <string name="loginFailed5Times">Maximum %s login attempts exceeded. Please try again in %s minutes.</string>
    <string name="currentBalance">Current balance</string>
    <string name="show">Show</string>
    <string name="myProfile">My Profile</string>
    <string name="tel">Hotline:</string>
    <string name="hide">Hide</string>
    <string name="account_info_format" translatable="false">%s - %s - %s</string>
    <string name="english" translatable="false">English</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="add">Address:</string>
    <string name="done">Done</string>
    <string name="zero" translatable="false">0</string>
    <string name="invalidRemarks">Invalid remarks</string>
    <string name="pleaseEnterConfirmCode">Please enter confirmation code at %s position on eSecure Card</string>
    <string name="transactionFailedDueToExceeding">Transaction failed due to exceeding the limit</string>
    <string name="authenticationFailed">Authentication failed. Please try again.</string>
    <string name="transactionFail">Transaction failed!</string>
    <string name="anErrorHasOccurred">Transaction failed. Please try again.</string>
    <string name="enterRecipientName">Enter Beneficiary Name</string>
    <string name="pleaseEnterTheAmount">Enter Amount</string>
    <string name="flexibleSaving">FLEXIBLE SAVING</string>
    <string name="staffLoans">SHB STAFF LOANS</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="from">From</string>
    <string name="toDate">To Date</string>
    <string name="noTransactionHistory">No transactions found</string>
    <string name="noAccountAvailable">No accounts available</string>
    <string name="confirmation">Confirmation</string>
    <string name="accountName">Account Name</string>
    <string name="enterCode">Enter code</string>
    <string name="remainingTime">Remaining time</string>
    <string name="second">second</string>
    <string name="errorCode" translatable="false">Errorcode</string>
    <string name="to">To</string>
    <string name="SHBAccount">SHB Account</string>
    <string name="transferAccountAndReceivingAccountNotSame">Source and recipient accounts must be in the same currency.</string>
    <string name="pleaseEnterTheAccountNumber">Please enter the Account Number</string>
    <string name="pleaseEnterToAccountNumber">Please enter to account</string>
    <string name="pleaseEnterTheRemarks">Please enter the remarks</string>
    <string name="enterRemarks">Enter remarks</string>
    <string name="transactionSuccess">Transaction successful!</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="chatpay">Paste2Pay</string>
    <string name="addNew">Add new</string>
    <string name="doYouWantToDeleteFromBeneficiary">Delete %s from beneficiaries?</string>
    <string name="nicknameAlreadyExists">The nickname already exists. Are you sure you want to use this nickname?</string>
    <string name="beneficiaryDeletedSuccessfully">Beneficiary deleted successfully!</string>
    <string name="editBeneficiary">Edit beneficiary</string>
    <string name="bank">Bank</string>
    <string name="minus">minutes</string>
    <string name="version">Ver</string>
    <string name="share">Share</string>
    <string name="changePassword">Change password</string>
    <string name="currentPassword">Current password</string>
    <string name="enterCurrentPassword">Enter current password</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_rule_length">Password must be between 8 and 20 characters.</string>
    <string name="password_rule_case">Password must contain at least one uppercase and one lowercase letter.</string>
    <string name="password_rule_special">Requires at least 1 numeric character and 1 special character .~!@#$\%^&amp;*()_+={}|:;&lt;&gt;,/?-</string>
    <string name="remark_default_value" translatable="false">%s TRANSFER</string>
    <string name="hint_select_bank">Select Bank</string>
    <string name="hint_enter_account_name">Enter Account Name</string>
    <string name="password_rule_username">Does not contain the username or the user\'s real name</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="hint_re_enter_new_password">Re-enter new password</string>
    <string name="change_password_success">Change password successfully !</string>
    <string name="change_password_success_message">Session expired. Please log in again.</string>
    <string name="error_current_password_incorrect">The current password is incorrect, please try again</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_new_and_old_password_same">The new password must not be the same as the old password</string>
    <string name="beneficiaryList">Beneficiary list</string>
    <string name="set_nickname">Set nickname</string>
    <string name="ask_set_nickname">Would you like to set a nickname for this recipient?</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="error_enter_nickname">Please enter the name</string>
    <string name="noLabel">No</string>
    <string name="yesLabel">Yes</string>
    <string name="register_device_title">Please register this device to use SHB Saha Cambodia.</string>
    <string name="register_device_message">For enhanced security, please verify your device using the OTP sent to %s to complete the app registration. Is this your phone number?</string>
    <string name="confirm_device_title">Confirm new device</string>
    <string name="confirm_device_message">Please enter the OTP sent to %s.</string>
    <string name="remaining_time">Remaining time %s second</string>
    <string name="otp_incorrect_message">Incorrect OTP. Please try again.</string>
    <string name="confirmLabel">Confirm</string>
</resources>