<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingVertical="@dimen/margin_8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_close" />

    <vn.shb.cam.base.view.MyTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_device_title"
        android:textColor="@color/colorTitleDialog"
        android:textSize="18sp"
        app:customFontWeight="semi_bold" />

    <vn.shb.cam.base.view.MyTextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_device_message"
        android:textColor="@color/colorContentDialog"
        android:textSize="14sp"
        app:customFontWeight="regular" />

    <vn.shb.cam.utils.view.pinview.PinView
        android:id="@+id/pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:cursorVisible="false"
        android:inputType="number"
        android:itemBackground="@drawable/bg_pin_view_item"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:itemCount="6"
        android:enabled="true"
        app:itemHeight="48dp"
        app:itemRadius="8dp"
        app:itemSpacing="8dp"
        app:itemWidth="40dp"
        app:lineColor="@color/neutral4"
        app:lineWidth="0dp"
        app:viewType="rectangle" />

    <vn.shb.cam.base.view.MyTextView
        android:id="@+id/tvTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:text="@string/remaining_time"
        android:textColor="@color/colorTitleDialog"
        android:textSize="14sp"
        app:customFontWeight="regular" />

    <vn.shb.cam.base.view.MyTextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/otp_incorrect_message"
        android:textColor="@color/colorError"
        android:textSize="12sp"
        android:visibility="gone"
        app:customFontWeight="regular" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_button_enable"
        android:enabled="false"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/confirmLabel"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>
