<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingVertical="@dimen/margin_8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:layout_gravity="end"
        app:srcCompat="@drawable/ic_close" />

    <vn.shb.cam.base.view.MyTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_device_title"
        android:textColor="@color/colorTitleDialog"
        android:textSize="18sp"
        app:customFontWeight="semi_bold"/>

    <vn.shb.cam.base.view.MyTextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_device_message"
        android:textColor="@color/colorContentDialog"
        android:textSize="14sp"
        app:customFontWeight="regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_negative_alert"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/noLabel"
            android:textAllCaps="false"
            android:textColor="@color/primary100" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_positive_alert"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/yesLabel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
