<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_12dp"
    android:paddingBottom="@dimen/margin_16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCloseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:padding="@dimen/margin_8dp"
        app:srcCompat="@drawable/ic_close" />

    <vn.shb.lao.base.view.MyTextView
        android:id="@+id/tvTitleAlert"
        style="@style/MaterialDialog.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:drawablePadding="@dimen/margin_10dp"
        android:text="@string/confirmationCode" />

    <vn.shb.lao.base.view.MyTextView
        android:id="@+id/tvContentAlert"
        style="@style/MaterialDialog.Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pleaseEnterConfirmCode" />

    <vn.shb.lao.base.view.MyTextView
        android:id="@+id/tvContentAlert2"
        style="@style/MaterialDialog.Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transactionFailedDueToExceeding" />

    <vn.shb.lao.base.view.MyEditText
        android:id="@+id/edtEnterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/bg_enter_code"
        android:hint="@string/enterCode"
        android:paddingHorizontal="@dimen/margin_12dp"
        android:paddingVertical="@dimen/margin_13dp"
        android:textColor="@color/black"
        android:textColorHint="@color/neutral6" />

    <vn.shb.lao.base.view.MyTextView
        android:id="@+id/tvRemainingTime"
        style="@style/MaterialDialog.Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="remaining Time" />

    <vn.shb.lao.base.view.MyTextView
        android:id="@+id/button_positive"
        style="@style/MaterialDialog.PositiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_weight="5"
        android:text="@string/shb_action_logout" />
</androidx.appcompat.widget.LinearLayoutCompat>
