<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingBottom="@dimen/paddingBottomLayout">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:padding="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        app:srcCompat="@drawable/ic_close" />

    <vn.shb.cam.base.view.MyTextView
        android:id="@+id/tvSelectBeneficiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/margin_16dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/selectBeneficiary"
        android:textColor="@color/neutral10"
        android:textSize="@dimen/textSize20"
        app:customFontWeight="semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:background="@drawable/bg_search_beneficiary"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_16dp"
        android:paddingHorizontal="@dimen/margin_12dp"
        android:paddingVertical="@dimen/margin_14dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_search" />

        <vn.shb.cam.base.view.MyEditText
            android:id="@+id/edtSearchBeneficiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:hint="@string/enterRecipientName"
            android:includeFontPadding="false"
            android:textColor="@color/black"

            android:textColorHint="@color/neutral6"
            android:textSize="@dimen/textSize14" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvBeneficiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12dp"
        app:layout_constraintHeight_max="350dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectAccount"
        tools:itemCount="7"
        tools:listitem="@layout/item_beneficiary_select" />

    <vn.shb.cam.base.view.MyTextView
        android:id="@+id/tvDone"
        style="@style/MaterialDialog.PositiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/done"
        android:textSize="@dimen/textSize18"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/rcvAccount" />
</androidx.appcompat.widget.LinearLayoutCompat>